fix: fix align

--- a/css/bundle.css
+++ b/css/bundle.css
@@ -38,9 +38,9 @@ h6 {
 }
 
 [type="button"] {
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  appearance: none;
+  -webkit-appearance: none !important;
+  -moz-appearance: none !important;
+  appearance: none !important;
 }
 
 .pos_center {
